--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec5">
 				<div class="-content">
-					<p class="domi-spanify">Goeie vraag! Wij zijn een inkoop / verkoop en reparatie bedrijf in telefoons, laptops, computers en accessoires. We proberen de deal altijd zo soepel en veilig mogelijk te laten verlopen zodat u zich altijd op het gemak voelt. Onze prijzen zijn altijd relatief het laagste vergeleken met onze concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden!</p>
-					<!--p style='transform: skewX(-10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Nog steeds vragen?</a></p-->
+					<p class="domi-spanify">Goeie vraag! Wij zijn een inkoop / verkoop en reparatie bedrijf in telefoons, computers en accessoires. Onze prijzen zijn altijd relatief het laagste vergeleken met onze concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden!</p>
 				</div>
 				<div class="-contactbutton">
 					<a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1"><button>Nog steeds vragen?</button></a>
@@ -200,10 +199,6 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					</div>
 				</div>
 			</div>
-			<!--div id="page-overons">
-				<h2>Over ons</h2>
-				<p>Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van Telefoons, Laptops en overige associares. Onze prijzen zijn relatief altijd de laagste vergeleken met de andere concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden.</p>
-			</div-->
 			<div id="page-contact">
 				<h1>Contact info</h1>
 				<p><i class="fas fa-user"></i> Naam: Nick Nijland<br><i class="fas fa-phone-alt"></i> Telefoonnummer: <a href='tel:0639311181'>0639311181</a><br><i class="fas fa-envelope"></i> Email: <a href='mailto:ditverkoopik@outlook.com'>ditverkoopik@outlook.com</a></p>
