--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec5">
 				<div class="-content">
-					<p class="domi-spanify">Goeie vraag! Wij zijn een inkoop / verkoop en reparatie bedrijf in telefoons, computers en accessoires. Onze prijzen zijn altijd relatief het laagste vergeleken met onze concurrenten en we proberen de klanttevredenheid zo hoog mogelijk te houden!</p>
+					<p class="domi-spanify">Goeie vraag! Wij zijn een inkoop / verkoop en reparatie bedrijf in telefoons, computers en accessoires. Onze prijzen zijn altijd het laagste en we proberen de klanttevredenheid zo hoog mogelijk te houden!</p>
 				</div>
 				<div class="-contactbutton">
 					<a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1"><button>Nog steeds vragen?</button></a>
