--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</div>
 			</div>
 			<div id="nsec2">
+				<div class="-coverbg"></div>
+				<div class="-coverwhite50"></div>
+				<div class="-covermsg"></div>
 				<div class="-content">
 					<p class="domi-spanify">Beloon jezelf een keer met een mooie nieuwe telefoon! Wil je hem gelijk kunnen gebruiken? Dat kan! Dat houd in: Schermprotector, hoesje, doos en oplader en we zetten ook je oude telefoon over naar je nieuwe. Zodat je hem meteen kunt gebruiken!</p>
 					<!--p style='transform: skewX(10deg);'><a target="_blank" href="https://www.instagram.com/ditverkoopik/">Bekijk ons assortiment!</a></p-->
