--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<h2>GERARANDEERD LAAGSTE PRIJS</h2>
 				</div-->
 				<div class="-content">
-					<p class="domi-spanify">We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden!  <br> Jij blij? Wij blij!</p>
+					<p class="domi-spanify" style="margin-right: -.25em;">We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden! <br> Jij blij? Wij blij!</p>
 					<!--p style='transform: skewX(-10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Vraag een reparatie aan!</a></p-->
 				</div>
 				<img src="res/phonec1.png" class="-phone">
