--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</div>
 			</div>
 			<div id="nsec4">
-				<div class="-content">
+				<div class="-content" style="max-width: calc(100% - 6em - 20px);">
 					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! <br> “En als ik daar geen zin in heb?”. <br> Dan geven we je een leuke prijs!</p>
 				</div>
 				<div class="-contactbutton">
