--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<script src="https://kit.fontawesome.com/043c21c0aa.js" crossorigin="anonymous"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
@@ -87,6 +88,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<!--div class="-heading">
 					<h2>GERARANDEERD LAAGSTE PRIJS</h2>
 				</div-->
+				<div class="-covermsg"></div>
 				<div class="-content">
 					<p class="domi-spanify">We repareren je telefoon met liefde! Heeft uw telefoon een nieuwe scherm nodig, accu, microfoon, luidspreker… noem het maar op, we helpen je graag. Voor de laagste prijs die je kan vinden! <br> Jij blij? Wij blij!</p>
 					<!--p style='transform: skewX(-10deg);'><a target="_blank" href="https://wa.me/message/I6GB6KOL53O2C1">Vraag een reparatie aan!</a></p-->
@@ -97,6 +99,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</div>
 			</div>
 			<div id="nsec4">
+				<div class="-covermsg"></div>
 				<div class="-content" style="max-width: calc(100% - 6em - 20px);">
 					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! <br> “En als ik daar geen zin in heb?”. <br> Dan geven we je een leuke prijs!</p>
 				</div>
