--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec5">
 				<div class="-coverbg"></div>
+				<div class="-coverpopetulpulii"></div>
 				<div class="-content">
 					<p class="domi-spanify">Goeie vraag! Wij zijn een inkoop / verkoop en reparatie bedrijf in telefoons, computers en accessoires. Onze prijzen zijn altijd het laagste en we proberen de klanttevredenheid zo hoog mogelijk te houden!</p>
 				</div>
