--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<!--div id="nsec6"></div-->
 			<div id="nsecrev">
-				<p style="font-size: 1.25em; text-align: center; width: 75%; margin: 0 auto; padding-bottom: .75em; margin-bottom: .75em; border-bottom: 1px solid var(--orange-one); white-space: initial; text-shadow: 0 0 10px #fff; z-index: 99; position: relative;"><b style='font-size: 2em; display: block;'>Oké oké,</b>maar wat zijn de reviews?</p>
+				<p style="font-size: 1.25em; text-align: center; width: 75%; margin: 0 auto; margin-bottom: 1.5em; white-space: initial; text-shadow: 0 0 10px #fff; z-index: 99; position: relative;"><b style='font-size: 2em; display: block;'>Oké oké,</b>maar, wie zijn jullie eigenlijk?</p>
 				<div class="-reviews splide">
 					<div class="splide__track">
 						<ul class="splide__list">
