--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
@@ -119,20 +120,19 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<!--div id="nsec6"></div-->
 			<div id="nsecrev">
-				<p style="font-size: 1.25em; text-align: center; width: 75%; margin: 0 auto; margin-bottom: 1.5em; white-space: initial; text-shadow: 0 0 10px #fff; z-index: 99; position: relative;"><b style='font-size: 2em; display: block;'>Oké oké,</b>maar wat zijn de reviews?</p>
+				<p style="font-size: 1.25em; text-align: center; width: 75%; margin: 0 auto; white-space: initial; text-shadow: 0 0 10px #fff; z-index: 99; position: relative;"><b style='font-size: 2em; display: block;'>Oké oké,</b>maar wat zijn de reviews?</p>
 				<div class="-reviews splide">
 					<div class="splide__track">
 						<ul class="splide__list">
 							<li class="-review splide__slide">
 								<div>
 									<div class="-user">
-										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-										<h3>Robert</h3>
+										<img src="res/pp1.jpeg">
+										<h3>Ella Jones</h3>
 									</div>
 									<div class="-msg">
-										<h3>1. Amazing!</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<!--h3>1. Amazing!</h3-->
+										<p>Laatst een setje Airpods gekocht, ze werken perfect! Binnen 1 dag geleverd.</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
@@ -146,13 +146,12 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 							<li class="-review splide__slide">
 								<div>
 									<div class="-user">
-										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-										<h3>Robert</h3>
+										<img src="res/pp2.jpeg">
+										<h3>Mart</h3>
 									</div>
 									<div class="-msg">
-										<h3>2. Amazing!</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<!--h3>1. Amazing!</h3-->
+										<p>Heel aardig, kreeg een gratis screenprotector erbij. Ik raad het zeker aan!</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
@@ -166,13 +165,12 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 							<li class="-review splide__slide">
 								<div>
 									<div class="-user">
-										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-										<h3>Robert</h3>
+										<img src="res/pp3.png">
+										<h3>Achmed Dineh</h3>
 									</div>
 									<div class="-msg">
-										<h3>3. Amazing!</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<!--h3>1. Amazing!</h3-->
+										<p>Echt een held! Mijn telefoon was helemaal kapot en dezelfde dag nog helemaal nieuw gemaakt! Ongelooflijk hoe goedkoop ook vergeleken met Apple zelf.</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
@@ -186,13 +184,221 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 							<li class="-review splide__slide">
 								<div>
 									<div class="-user">
-										<img src="https://images.unsplash.com/photo-1494708001911-679f5d15a946?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-										<h3>Robert</h3>
+										<img src="res/pp4.png">
+										<h3>Hicham</h3>
 									</div>
 									<div class="-msg">
-										<h3>4. Amazing!</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<!--h3>1. Amazing!</h3-->
+										<p>Prachtige nieuwe Macbook Air gekocht voor mijn vriendins verjaardag. Kreeg er zelfs een gratis hoesje bij. Aardige jongen ook, legt je alles uit en helpt je graag.</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp5.png">
+										<h3>Wilma de Vries</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Hele aardige jongen. Verplaatste al mijn ouwe gegevens over naar me nieuwe telefoon en legde me goed uit hoe alles werkt in elkaar zat!</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp6.png">
+										<h3>Finn Cresswell</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Mijn telefoon was helemaal kapot. Kon dezelfde dag nog een iPhone XR krijgen met een schermprotector en hoesje en al.</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star-half-alt"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp7.png">
+										<h3>Marije</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Geüpgrade naar een iPhone 11, Snelle verzending en vooral een goedkope prijs, raadt het zeker aan!</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp8.png">
+										<h3>Miranda Trip</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Goeie service, snelle levering en goed verpakt. Ik koop hier zeker meer in de toekomst :)</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp9.png">
+										<h3>Henk</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Setje Airpods Pro gekocht laatst voor mijn vrouw haar verjaardag!</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star-half-alt"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp10.jpeg">
+										<h3>Martin</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Laatst mijn Macbook ingeruilt voor een nieuwe, hele aardige jongen. En goedkoop ook nog. Ik zal hier zeker terug komen.</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp11.png">
+										<h3>Brunhilde van Rozen</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Ik heb paar week geleden Airpods 2 gekocht voor me zoons verjaardag, alles werkt top en heel goedkoop!</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp4.png">
+										<h3>Anoniem</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Onverstelt hoe goeie kwaliteit en zo goedkoop. Abnormaal</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp13.jpeg">
+										<h3>Anthonio</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Zeker aan te raden! Heb het aan al mijn vrienden aangeraden om hier een nieuwe telefoon te kopen! ;)</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star-half-alt"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp4.png">
+										<h3>Anoniem</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Schermprotector en hoesje gratis bij mijn telefoon gekregen.</p>
+										<div class="-stars">
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+											<i style="color: var(--orange-one);" class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="-review splide__slide">
+								<div>
+									<div class="-user">
+										<img src="res/pp15.jpeg">
+										<h3>Jasmine</h3>
+									</div>
+									<div class="-msg">
+										<!--h3>1. Amazing!</h3-->
+										<p>Ik haal nooit meer iets ergens anders vandaan. Blijf zeker een vaste klant hier!!!</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
