--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<div class="-coverwhite50"></div>
 				<div class="-covermsg"></div>
 				<div class="-content">
-					<p class="domi-spanify">Beloon jezelf een keer met een mooie nieuwe telefoon! Wil je hem gelijk kunnen gebruiken? Dat kan! Dat houd in: Schermprotector, hoesje, doos en oplader en we zetten ook je oude telefoon over naar je nieuwe. Zodat je hem meteen kunt gebruiken!</p>
+					<p class="domi-spanify">Beloon jezelf een keer met een mooie nieuwe telefoon! Wil je hem gelijk kunnen gebruiken? Dat kan! Dat houdt in: schermprotector, hoesje, doos en oplader en we zetten ook je oude telefoon over naar je nieuwe. Zodat je hem meteen kunt gebruiken!</p>
 					<!--p style='transform: skewX(10deg);'><a target="_blank" href="https://www.instagram.com/ditverkoopik/">Bekijk ons assortiment!</a></p-->
 				</div>
 				<img src="res/phone1.png" class="-phone">
@@ -208,7 +208,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 									</div>
 									<div class="-msg">
 										<!--h3>1. Amazing!</h3-->
-										<p>Hele aardige jongen. Verplaatste al mijn ouwe gegevens over naar me nieuwe telefoon en legde me goed uit hoe alles werkt in elkaar zat!</p>
+										<p>Hele aardige jongen. Verplaatste al mijn ouwe gegevens over naar mijn nieuwe telefoon en legde me goed uit hoe alles werkt!</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
@@ -246,7 +246,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 									</div>
 									<div class="-msg">
 										<!--h3>1. Amazing!</h3-->
-										<p>Geüpgrade naar een iPhone 11, Snelle verzending en vooral een goedkope prijs, raadt het zeker aan!</p>
+										<p>Geüpgraded naar een iPhone 11, Snelle verzending en vooral een goedkope prijs, raad het zeker aan!</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
@@ -265,7 +265,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 									</div>
 									<div class="-msg">
 										<!--h3>1. Amazing!</h3-->
-										<p>Goeie service, snelle levering en goed verpakt. Ik koop hier zeker meer in de toekomst :)</p>
+										<p>Goede service, snelle levering en goed verpakt. Ik koop hier zeker meer in de toekomst :)</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
@@ -322,7 +322,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 									</div>
 									<div class="-msg">
 										<!--h3>1. Amazing!</h3-->
-										<p>Ik heb paar week geleden Airpods 2 gekocht voor me zoons verjaardag, alles werkt top en heel goedkoop!</p>
+										<p>Ik heb paar week geleden Airpods 2 gekocht voor de verjaardag van mijn zoon, alles werkt top en heel goedkoop!</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
@@ -341,7 +341,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 									</div>
 									<div class="-msg">
 										<!--h3>1. Amazing!</h3-->
-										<p>Onverstelt hoe goeie kwaliteit en zo goedkoop. Abnormaal</p>
+										<p>Onvoorstelbaar hoe goeie kwaliteit en zo goedkoop. Abnormaal</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
