--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 									</div>
 									<div class="-msg">
 										<!--h3>1. Amazing!</h3-->
-										<p>Ik heb paar week geleden Airpods 2 gekocht voor de verjaardag van mijn zoon, alles werkt top en heel goedkoop!</p>
+										<p>Ik heb paar weken geleden Airpods2 gekocht voor de verjaardag van mijn zoon. Hij was er heel erg blij mee!</p>
 										<div class="-stars">
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
 											<i style="color: var(--orange-one);" class="fas fa-star"></i>
