--- a/comingsoon.html
+++ b/comingsoon.html
@@ -32,7 +32,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 	</head>
 	<body>
 		<div>
-			<h1>Komt binnenkort</h1>
+			<h1>KOMT BINNENKORT</h1>
 		</div>
 	</body>
 </html>
