--- a/comingsoon.html
+++ b/comingsoon.html
@@ -19,9 +19,9 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<meta property="og:site_name" content="Het Turbospel">
 		<meta property="og:type" content="website">
 		<!-- Style related -->
-		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru:wght@400;700&display=swap" rel="stylesheet">
 		<style type="text/css">
-			* { font-family: 'Source Sans Pro', sans-serif; margin: 0; }
+			* { font-family: 'Kosugi Maru', sans-serif; margin: 0; }
 			*::selection { background: #000B; color: white; }
 			body { background: black; color: white; }
 			div { width: 100vw; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; font-size: 2em; padding: .5em; box-sizing: border-box; }
