--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 - -- --- ---- - Have a nice day! :) - ---- --- -- -
 -->
 	<head>
+		<!-- TrustBox script -->
+<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+<!-- End TrustBox script -->
 		<!-- Meta data -->
 		<title>Ditverkoopik &ndash; Welkom!</title>
 		<meta name="google-site-verification" content="dhk-PKhG_oZUa9I_39GHEoQ7KF0dRgReNOEL5hqeppU" />
@@ -22,6 +25,11 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<meta property="og:type" content="website">
 		<meta property="og:description" content="Ditverkoopik is een inkoop / verkoop / reparatie bedrijf van telefoons, laptops en overige accessoires. Onze prijzen zijn relatief altijd het laagste, vergeleken met de andere concurrenten. We proberen de klanttevredenheid altijd zo hoog mogelijk te houden.">
 		<meta property="og:image" content="res/logo_1_1.png">
+		<!-- TrustBox widget - Micro Review Count -->
+<div class="trustpilot-widget" data-locale="nl-NL" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="6050d5c2c75ddc0001352db0" data-style-height="24px" data-style-width="100%" data-theme="dark">
+  <a href="https://nl.trustpilot.com/review/ditverkoopik.nl" target="_blank" rel="noopener">Trustpilot</a>
+</div>
+<!-- End TrustBox widget -->
 		<!-- Style related -->
 		<link rel="shortcut icon" href="res/logo_1_1.png">
 		<link rel="stylesheet" type="text/css" href="style.css">
