--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				</div>
 			</div>
 			<!-- TrustBox widget - Micro Review Count -->
-<div class="trustpilot-widget" data-locale="nl-NL" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="6050d5c2c75ddc0001352db0" data-style-height="24px" data-style-width="100%" data-theme="dark">
+<div class="trustpilot-widget" data-locale="nl-NL" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="6050d5c2c75ddc0001352db0" data-style-height="24px" data-style-width="100%" data-theme="light">
   <a href="https://nl.trustpilot.com/review/ditverkoopik.nl" target="_blank" rel="noopener">Trustpilot</a>
 </div>
 <!-- End TrustBox widget -->
