--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 					<li><a href='#page-contact'>Contact</a></li>
 					<!--li><a href='#page-overons'>Over Ons</a></li-->
 				</ul>
+				
 			</div>
+			
 			<div class="-phone">
 				<a href='#top'><img src="res/logo_1_1_alt.png"></a>
 			</div>
@@ -57,7 +59,13 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 		<div id="top"></div>
 		<div id="page-content">
 			<div id="nsec1">
-				<div class="-cover"></div>
+				<div class="-cover">
+					<!-- TrustBox widget - Micro Review Count -->
+<div class="trustpilot-widget" data-locale="nl-NL" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="6050d5c2c75ddc0001352db0" data-style-height="24px" data-style-width="100%" data-theme="dark">
+	<a href="https://nl.trustpilot.com/review/ditverkoopik.nl" target="_blank" rel="noopener">Trustpilot</a>
+  </div>
+  <!-- End TrustBox widget -->
+				</div>
 				<div class="-content">
 					<div class="-c1">
 						<h1><img src="res/logow_1_1.png" style="height: .85em; position: relative; top: .125em;"> Welkom</h1>
@@ -72,11 +80,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 							<a href="https://wa.me/message/I6GB6KOL53O2C1" target="_blank" data-tooltip="WhatsApp"><i class="fab fa-whatsapp"></i></a>
 							<a href="https://www.marktplaats.nl/smb-profile/profile/25131853" target="_blank" data-tooltip="Marktplaats"><img src="res/marktplaats.png" style="height: 1em; position: relative; top: .125em;"></a>
 						</p>
-						<!-- TrustBox widget - Micro Review Count -->
-<div class="trustpilot-widget" data-locale="nl-NL" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="6050d5c2c75ddc0001352db0" data-style-height="24px" data-style-width="100%" data-theme="dark">
-  <a href="https://nl.trustpilot.com/review/ditverkoopik.nl" target="_blank" rel="noopener">Trustpilot</a>
-</div>
-<!-- End TrustBox widget -->
+						
 					</div>
 				</div>
 			</div>
@@ -109,7 +113,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 			</div>
 			<div id="nsec4">
 				<div class="-covermsg"></div>
-				<div class="-content" style="">
+				<div class="-content">
 					<p class="domi-spanify">Dat kan zeker! Ruil hem in voor een andere mooie telefoon bij ons! <br> “En als ik daar geen zin in heb?”. <br> Dan geven we je een leuke prijs!</p>
 				</div>
 				<div class="-contactbutton">
