Telefoonnummer en email update

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 																					</div>
 <div id="page-contact">
 				<h1>Contact info</h1>
-				<p><i class="fas fa-user"></i> Naam: Nick Nijland<br><i class="fas fa-phone-alt"></i> Telefoonnummer: <a href='tel:0639311181'>0639311181</a><br><i class="fas fa-envelope"></i> Email: <a href='mailto:ditverkoopik@outlook.com'>ditverkoopik@outlook.com</a></p>
+				<p><i class="fas fa-user"></i> Naam: Nick Nijland<br><i class="fas fa-phone-alt"></i> Telefoonnummer: <a href='tel:0682789176'>0682789176</a><br><i class="fas fa-envelope"></i> Email: <a href='mailto:ditverkoopik@workmail.com'>ditverkoopik@workmail.com</a></p>
 				<p class="-social">
 					<a href="https://www.instagram.com/ditverkoopik/" target="_blank" data-tooltip="Instagram"><i class="fab fa-instagram"></i></a>
 					<a href="https://www.facebook.com/ditverkoopik/" target="_blank" data-tooltip="Facebook"><i class="fab fa-facebook"></i></a>
