--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 - -- --- ---- - Have a nice day! :) - ---- --- -- -
 -->
 	<head>
+		<script data-ad-client="ca-pub-8073875465805050" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- TrustBox script -->
 <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
 <!-- End TrustBox script -->
