--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 -->
 	<head>
 		<script data-ad-client="ca-pub-8073875465805050" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8073875465805050"
+     crossorigin="anonymous"></script>
+		
 		<!-- TrustBox script -->
 <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
 <!-- End TrustBox script -->
