--- a/index.html
+++ b/index.html
@@ -155,5 +155,17 @@ Check me on Fiverr! . https://www.fiverr.com/domi_s
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d299.5958304273201!2d6.616547789736888!3d53.07846516490942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c82ee266f3955b%3A0x8dbe6d431695b6dc!2sDorpsstraat%2059%2C%209482%20PB%20Tynaarlo%2C%20Netherlands!5e0!3m2!1sen!2sro!4v1610053281963!5m2!1sen!2sro" style="width: 100%; height: 350px; border: 0; border-radius: 5px;" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			</div>
 		</div>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8073875465805050"
+     crossorigin="anonymous"></script>
+<!-- blok 2 ditverkoopik -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8073875465805050"
+     data-ad-slot="7912837044"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	</body>
 </html>
